--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,146 @@
 @import "tailwindcss";
+ 
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+/* @tailwind "base";
+@tailwind "components";
+@tailwind "utilities"; */
+
+
+
+
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+@import 'react-toastify/dist/ReactToastify.css';
+@import 'remixicon/fonts/remixicon.css';
+
+:root{
+  --prim: #B79F4F;
+  --prim-dark: #ffc400;
+
+  --text-color: #1D1913;
+  --text-light: #c4beb8;
+  --body: #191817;
+  --white: #ffffff;
+  --black: #000000;
+
+  --transition-regular: .2s;
+  --transition-slow: .4s;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.Rethink_Sans {
+  font-family: var(--font-rethink);
+}
+.DmSans {
+  font-family: var(--font-dmSans);
+}
+.Audiowide {
+  font-family: var(--font-audiowide);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+*{
+  scroll-behavior: smooth;
+}
+
+body{
+  background: var(--body);
+  color: var(--white);
+  overflow-x: hidden !important;
+}
+
+/*about section*/
+
+.about-wrap {
+  position: relative;
+}
+.about-wrap:after{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1px;
+  height: 100%;
+  background: var(--white);
+  opacity: 0.2;
+  z-index: -1;
+}
+
+.about-content{
+  position: relative;
+}
+.about-content:after{
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+  height: 50px;
+  background: var(--prim-dark);
+  color: var(--black);
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
+  font-weight: 700;
+  font-family: var(--font-rethink);
+  border-radius: 100%;
+}
+
+.about-content:nth-child(1):after{
+  content: '1';
+}
+.about-content:nth-child(2):after{
+  content: '2';
+}
+.about-content:nth-child(3):after{
+  content: '3';
+}
+
+.work-banner{
+  width: 100%;
+  height: 90vh;
+  background: url(../public/Images/work-banner-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+  z-index: 1;
+}
+
+.work-banner:after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.1);
+  z-index: -1;
+}
+
+/* End about section */
+
+@media (max-width: 991px) {
+  .about-content:after,
+  .about-wrap:after {
+    display: none;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@media (max-width: 575px) {
+  body {
+    font-size: 14px;
+  }
+}
+
+
+/* testimonial section */
+.testimonial {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.2);
 }
